# caseRunner

./: .gitignore  README.md  demo.tape  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml
src/casecraft/: app.py  cli.py  headless.py  models.py  runner.py  utils.py
src/casecraft/widgets/: add_modal.py  diff_viewer.py  file_browser.py  file_tree_modal.py  help_modal.py  history_modal.py  import_modal.py  search_modal.py
src/caserunner/: app.py  cli.py  models.py  runner.py  utils.py
src/caserunner/widgets/: add_modal.py  diff_viewer.py  help_modal.py  history_modal.py  import_modal.py  search_modal.py
