[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casecraft"
version = "2.0.0"
description = "A powerful TUI for running algorithmic test cases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "pydantic>=2.0.0",
]

[project.scripts]
casecraft = "casecraft.cli:main"
