[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casecraft"
version = "1.4.13"
description = "A powerful TUI for running custom test cases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "pydantic>=2.0.0",
]
authors = [
    {name = "Saksham Tale"}
]

[project.scripts]
casecraft = "casecraft.cli:main"

[project.urls]
Homepage = "https://github.com/Saksham-cmd-tech/caseRunner"
Repository = "https://github.com/Saksham-cmd-tech/caseRunner.git"
"Bug Tracker" = "https://github.com/Saksham-cmd-tech/caseRunner/issues"
