[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casecraft"
version = "1.6.0"
description = "A powerful TUI for running custom test cases."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
keywords = ["testing", "tui", "cli", "developer-tools"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "textual>=0.40.0",
    "pydantic>=2.0.0",
]
authors = [
    {name = "Saksham Tale"}
]

[project.scripts]
casecraft = "casecraft.cli:main"

[project.urls]
Homepage = "https://github.com/Saksham-cmd-tech/caseRunner"
Repository = "https://github.com/Saksham-cmd-tech/caseRunner.git"
"Bug Tracker" = "https://github.com/Saksham-cmd-tech/caseRunner/issues"
